[gd_scene load_steps=9 format=2]

[ext_resource path="res://scripts/LaunchBall.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/ball.png" type="Texture" id=2]
[ext_resource path="res://scripts/ResetAndCollision.gd" type="Script" id=3]
[ext_resource path="res://assets/audio/softhit.mp3" type="AudioStream" id=4]
[ext_resource path="res://assets/audio/hardhit.mp3" type="AudioStream" id=5]
[ext_resource path="res://assets/audio/medhit.mp3" type="AudioStream" id=6]

[sub_resource type="PhysicsMaterial" id=2]
bounce = 0.5

[sub_resource type="CircleShape2D" id=1]
radius = 32.0

[node name="Ball" type="RigidBody2D"]
physics_material_override = SubResource( 2 )
gravity_scale = 5.0
contacts_reported = 1
contact_monitor = true
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AimLine" type="Line2D" parent="."]
width = 5.0
default_color = Color( 0, 1, 0, 1 )
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 2 )

[node name="Radius" type="Line2D" parent="."]
visible = false
points = PoolVector2Array( 0, 0, 0, -32 )
width = 5.0
default_color = Color( 1, 0, 0, 1 )

[node name="Cooldown" type="Timer" parent="."]
wait_time = 2.5
one_shot = true

[node name="HardHit" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -15.0

[node name="MedHit" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -15.0

[node name="SoftHit" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -15.0

[connection signal="body_entered" from="." to="." method="_on_Ball_body_entered"]
